Fix a bug where header would have a smaller z-index than input in CrosswordCells

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,6 +13,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  z-index: 100;
 }
 
 @media (max-width: 400px) {
